fixed clipping issue for real

--- a/styles/style.css
+++ b/styles/style.css
@@ -135,7 +135,7 @@
 #searchbar {
     border: white;
     width: 455px;
-    height: 15px;
+    height: 20px;
     position: absolute;
     top: 50%;
     left: 48%;
